<resources>
    <string name="app_name">漫画阅读器</string>
    
    <!-- 导航标题 -->
    <string name="title_home">首页</string>
    <string name="title_library">书库</string>
    <string name="title_search">搜索</string>
    <string name="title_member">我的</string>
    <string name="title_comic">漫画</string>
    <string name="title_comic_detail">漫画详情</string>
    
    <!-- 通用文本 -->
    <string name="loading">加载中...</string>
    <string name="network_error">网络连接失败</string>
    <string name="pull_to_load">上拉加载更多</string>
    <string name="no_more">没有更多了</string>
    <string name="see_more">查看更多</string>
    <string name="latest_uploads">最新上传</string>
    <string name="weekly_update">每周更新</string>
</resources>