<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <!-- 主页 -->
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.yourpackage.ui.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        
        <action
            android:id="@+id/action_main_to_comic"
            app:destination="@id/comicFragment" />
            
        <action
            android:id="@+id/action_main_to_detail"
            app:destination="@id/comicDetailFragment" />
            
        <action
            android:id="@+id/action_main_to_search"
            app:destination="@id/searchFragment" />
    </fragment>

    <!-- 漫画列表页 -->
    <fragment
        android:id="@+id/comicFragment"
        android:name="com.yourpackage.ui.comic.ComicFragment"
        android:label="@string/title_comic"
        tools:layout="@layout/fragment_comic" />

    <!-- 漫画详情页 -->
    <fragment
        android:id="@+id/comicDetailFragment"
        android:name="com.yourpackage.ui.detail.ComicDetailFragment"
        android:label="@string/title_comic_detail"
        tools:layout="@layout/fragment_comic_detail" />

    <!-- 搜索页 -->
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.yourpackage.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <!-- 书库页 -->
    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.yourpackage.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <!-- 会员中心 -->
    <fragment
        android:id="@+id/memberFragment"
        android:name="com.yourpackage.ui.member.MemberFragment"
        android:label="@string/title_member"
        tools:layout="@layout/fragment_member" />

    <!-- 阅读器页面 -->
    <activity
        android:id="@+id/readActivity"
        android:name="com.yourpackage.ui.read.ReadActivity"
        android:label="@string/title_reader" />

</navigation>